--- a/starwars/src/components/StarWars.css
+++ b/starwars/src/components/StarWars.css
@@ -2,7 +2,9 @@
     display: flex;
     flex-direction: column;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    border: 1px dotted red;
+    border: 4px dotted black;
+    background-size: cover;
+  
   }
 
   .CardTitle{
