--- a/starwars/src/App.css
+++ b/starwars/src/App.css
@@ -1,12 +1,15 @@
 .App1 {
   text-align: center;
-  background-image: url(/static/media/sw-bg.dff75a1f.jpg);
+  background-image: url(https://images.unsplash.com/photo-1516339901601-2e1b62dc0c45?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60);
   background-size: auto;
 
 }
 .Header {
-  color: #443e3e;
+  color: #0790df;
   text-shadow: 1px 1px 5px #fff;
   font-size: 5rem;
+  
 }
+
+
 /* write your parent styles in here for your App.js */
