--- a/starwars/src/index.css
+++ b/starwars/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-image: url('./sw-bg.jpg');
+  background-image: url('./alexander-andrews-fsH1KjbdjE8-unsplash.jpg');
   background-size: cover;
   
 }
